# python3-cookiecutter

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  LICENSE  Makefile  README.md  cliff.toml  cookiecutter.json  cookiecutter.yml  pyproject.toml
.cookiecutter_includes/: gitignore.j2  license_header.j2
.cookiecutter_includes/community_health_files/: __init__.j2  code_of_conduct.j2  codeowners.j2  contributing.j2  funding.j2  pull_request_template.j2  security.j2  support.j2
.cookiecutter_includes/community_health_files/issue_template/: 01-bug-report.j2  02-feature-request.j2  __init__.j2  config.j2  z-developer-issue.j2
.cookiecutter_includes/community_health_files/pull_request_template/: 01-default-pull-request.j2  02-bug-fix.j2  03-feature-request.j2  __init__.j2
.cookiecutter_includes/license/: 0bsd.j2  __init__.j2  agpl-3.0.j2  apache-2.0.j2  bsd-2-clause.j2  bsd-3-clause.j2  gpl-3.0.j2  license-data.j2  license-header.j2  license.j2  mit.j2  unlicense.j2
.cookiecutter_includes/make/: __init__.j2  clean.j2  docs.j2  help.j2  lint.j2  phony.j2  python.j2  settings.j2  version.j2
.cookiecutter_includes/pyproject/: __init__.j2
.cookiecutter_includes/tests/: __init__.j2  bake.j2
.cookiecutter_includes/workflows/: __init__.j2  contributor-assistant.j2  dependency-check.j2  format-check.j2  jekyll-gh-pages.j2  lint-check.j2  security-audit.j2  spellcheck.j2  tests.j2  typecheck.j2
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml  z-developer-issue.yml
.github/workflows/: black-format.yml  cla.yml  dependency-check.yml  format-check.yml  jekyll-gh-pages.yml  jinja2-lint.yml  lint-check.yml  lint.yml  ruff-lint.yml  security-audit.yml  spellcheck.yml  test.yml  tests.yml  typecheck.yml  yaml-lint.yml
changelogs/: CHANGELOG.md
changelogs/releases/: v0.1.0.md
docs/: cookiecutter_input.json
docs/jekyll/: .gitignore  Makefile  README.md  _config.yml  index.md
docs/jekyll/_manual/contribute/: create-feature-request.md  create-pull-request.md  developer-guide.md  index.md
docs/jekyll/_manual/developer-resources/: cla-privacy-policy.md  cla.md  contribute.md  index.md
docs/jekyll/_manual/introduction/: getting-started.md  index.md  installation-guide.md
docs/jekyll/_manual/setup-guide/: index.md  requirements.md
docs/jekyll/_manual/troubleshooting/: faq.md  index.md
docs/jekyll/_manual/tutorials/: index.md
docs/jekyll/_manual/upgrade-guide/: index.md
docs/jekyll/_manual/whatsnew/: index.md
docs/jekyll/_resources/: repository-link.md
docs/jekyll/docs/: cookiecutter_input.json
hooks/: post_gen_project.py  pre_gen_project.py
shared_assets/licenses/ApacheV2/: HEADER  LICENSE  NOTICE
shared_assets/licenses/GPLV3/: LICENSE
shared_assets/licenses/MIT/: LICENSE
shared_assets/make/: env-cfg.mk
shared_assets/make/docs/: github.mk
src/: .gitignore
src/{{ cookiecuter.package_name }}/: __main__.py
templates/python/apps/cli/: Makefile  README.md  ccmeta.toml  cookiecutter.json  pyproject.toml
templates/python/apps/cli/{{ cookiecutter.package_name }}/: Dockerfile  Makefile
templates/python/apps/cli/{{ cookiecutter.package_name }}/.github/workflows/: black-format.yml  ruff-lint.yml  tests.yml  typecheck.yml
templates/python/apps/cli/{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/: __init__.py  __main__.py
templates/python/apps/cli/{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/cli/: config.py  main.py
templates/python/apps/cli/{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/cli/commands/: __init__.py
templates/python/apps/cli/{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/core/: __init__.py  logger.py
templates/python/apps/cli/{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/models/: __init__.py  metadata.py
tests/: test_bake_project.py
{{ cookiecutter.package_name }}/: .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  pyproject.toml
{{ cookiecutter.package_name }}/.github/: FUNDING.yml
{{ cookiecutter.package_name }}/.github/workflows/: ruff-lint.yml  test.yml  typecheck.yml  yaml-lint.yml
{{ cookiecutter.package_name }}/src/{{ cookiecuter.package_name }}/: __init__.py  {{ cookiecutter.package_name }}.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/: __init__.py  __main__.py  {{ cookiecutter.package_name }}.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/cli/: __init__.py  main.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/cli/options/: __init__.py  version.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/core/: config.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/models/: config.py
{{ cookiecutter.project_slug }}/: .cookiecutter_includes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE.md  Makefile  cliff.toml  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml  z-developer-issue.yml
{{ cookiecutter.project_slug }}/.github/PULL_REQUEST_TEMPLATE/: 01-default-pull-request.md  02-bug-fix.md  03-feature-request.md
{{ cookiecutter.project_slug }}/.github/workflows/: jekyll-gh-pages.yml  ruff-lint.yml
{{ cookiecutter.project_slug }}/src/: .gitignore
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/cli/: __init__.py  main.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/cli/options/: __init__.py  verbose.py  version.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/core/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test-{{ cookiecutter.package_name }}.py  tests.py
(+1 files in other folders)
