# pyproject.toml
# =========================================
# Project: python3-cookiecutter
# =========================================
[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cookiecutter"
version = "0.1.0"
description = "Python3 cookiecutter template + integration with (github-docs-cookiecutter) Github docs template generation."
authors = [
    { name="Jared Cook", email="jcook3701+github@gmail.com" }
]
readme = "./README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []
keywords = [
  "python",
  "python3",
  "cookiecutter",
  "automation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jcook3701/python3-cookiecutter"
Repository = "https://github.com/jcook3701/python3-cookiecutter"
Documentation = "https://github.com/jcook3701/python3-cookiecutter/docs/jekyll"

[project.optional-dependencies]
dev = [
  "black>=25.11",
  "ruff>=0.14.0",
  "mypy==1.9",
  "pytest>=8.0",
  "pytest-cookies>=0.7",
  "yamllint>=1.0",
  "jinja2-cli>=0.8",
  "myst-parser>=0.18",
  "typer>=0.20",
]
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "sphinx-markdown-builder>=0.6",
  "sphinx-autodoc-typehints>=3.5",
]
# ====================================
# Setuptools Configuration:
# ====================================
[tool.setuptools.packages.find]
where = [
  "hooks",
]
include = [
  "hooks*",
]
# ====================================
# Ruff Configuration:
# ====================================
[tool.ruff]
# Target Python version
target-version = "py311"
# Directories to lint and format
src = [
  "hooks",
  "tests",
]
# Exclude these paths
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "docs",
  "*.egg-info",
  ".git",
  ".github",
]
# Maximum line length
line-length = 120
# ====================================
# Ruff Lint Configuration:
# ====================================
[tool.ruff.lint]
# Enable linting rules
select = [
  "W",  # PyCodeStyle warnings
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4", # comprehensions
  "TID", # tidy imports
  "FA", # future annotations
  "PL", # pylint-style checks
  "RUF", # ruff-specific
]
# Ignore specific rules
ignore = [
  "E501",  # line too long (handled by formatter)
  "PLR2004",  # magic value comparison
  "B008",  # function call in default argument
]
# ====================================
# Import sorting (Python helper scripts)
# ====================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["python3-cookiecutter"]
# ====================================
# Formatter configuration
# Ruff also formats YAML, TOML, and Markdown
# ====================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
# ====================================
# Black Configuration: (Formatting)
# ====================================
[tool.black]
line-length = 88          # Maximum line length (default is 88)
target-version = ["py310"] # Target Python version(s)
skip-string-normalization = false  # Whether to skip normalizing string quotes
include = '\.pyi?$'       # Which files to include (regex)
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
# ====================================
# Mypy (type checker) Configuration
# ====================================
[tool.mypy]
python_version = 3.11
strict = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# ====================================
# Pytest configuration
# ====================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--maxfail=1", "-W always", "-rw", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["hooks"]
