# pyproject.toml
# =========================================
# Project: {{ cookiecutter.project_name }}
# =========================================

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
  { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = {{ cookiecutter.config.requires_python|tojson }}
dependencies = []
keywords = {{ cookiecutter.config.keywords|tojson }}
classifiers = {{ cookiecutter.config.classifiers|tojson }}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter }}"
Documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter }}/docs/jekyll"

[project.optional-dependencies]
dev = [
  "ruff>=0.14.0",
  "mypy==1.9",
  "pytest>=8.0",
  "yamllint>=1.0",
  "jinja2-cli>=0.8",
]

docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "sphinx-markdown-builder>=0.6",
  "sphinx-autodoc-typehints>=3.5",
]

[tool.ruff]
# Target Python version
target-version = "py311"

# Directories to lint and format
src = ["src", "tests"]

# Exclude these paths
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "docs",
  "*.egg-info",
  ".git",
  ".github",
]

# Maximum line length
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
# Enable linting rules
select = [
  "W",  # PyCodeStyle warnings
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "PL", # pylint-style checks
]

# Ignore specific rules
ignore = [
  "E501",  # line too long (handled by formatter)
  "PLR2004",  # magic value comparison
  "B008",  # function call in default argument
]

# ====================================
# Import sorting (Python helper scripts)
# ====================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["python3-cookiecuter"]

# ====================================
# Formatter configuration
# Ruff also formats YAML, TOML, and Markdown
# ====================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ====================================
# Mypy (type checker) Configuration
# ====================================
[tool.mypy]
python_version = "3.9"
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ====================================
# Pytest configuration
# ====================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--maxfail=1", "--disable-warnings"]

# ====================================
# Optional entry point (lets you run with `python -m {{ cookiecutter.package_name }}`)
# ====================================
[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.__main__:main"
