{% import '.cookiecutter_includes/license/__init__.j2' as license_macros with context %}
{{- license_macros.license_header.create(
  cookiecutter.license,
  cookiecutter.copyright,
  cookiecutter.project_slug,
  file_name='pyproject.toml',
  comment_style='hash') }}

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
  { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}" }
]
readme = "README.md"
license = "{{ cookiecutter.license }}"
license-files = ["LICENSE"]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
  "nutri-matic>=0.1",
  "typer>=0.20",
]
keywords = {{ cookiecutter.__python.keywords | tojson }}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/docs/jekyll"

[project.optional-dependencies]
dev = [
  "bump-my-version>=1.2",
  "black>=25.11",
  "codespell>=2.4",
  "cookiecutter>=2.6",
  "cookiecutter-project-upgrader>=1.3",
  "coverage>=7.12",
  "deptry>=0.24",
  "json-lint-tools>=0.1",
  "jinja2-cli>=0.8",
  "mypy==1.9",
  "nameisok>=0.1",
  "pip-audit>=2.10",
  "pre-commit>=4.5",
  "pytest>=9.0",
  "pytest-cookies>=0.7",
  "pytest-cov>=7.0",
  "ruff>=0.14.0",
  "tomllint>=0.3",
  "yamllint>=1.0",
]

docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "sphinx-markdown-builder>=0.6",
  "sphinx-autodoc-typehints>=3.5",
]
# ====================================
# Optional entry point:
# lets you run with either:
#      1. ```python -m {{ cookiecutter.project_slug }}```
#      2. ```{{ cookiecutter.project_slug }}```
# ====================================
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli.main:app"
# ====================================
# Setuptools Configuration:
# ====================================
[tool.setuptools.packages.find]
where = [
  "src",
]
include = [
  "{{ cookiecutter.project_slug }}*",
]
# ====================================
# Black Configuration: (Formatting)
# ====================================
[tool.black]
line-length = 88          # Maximum line length (default is 88)
target-version = ["{{ cookiecutter.__python.target_version }}"] # Target Python version(s)
skip-string-normalization = false  # Whether to skip normalizing string quotes
include = '\.pyi?$'       # Which files to include (regex)
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
# ====================================
# Version Bumping (bump-my-version):
# ====================================
[tool.bumpversion]
current_version = "{{ cookiecutter.version }}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = false
commit = false

[[tool.bumpversion.files]]
filename = "Makefile"
[[tool.bumpversion.files]]
filename = "README.md"
[[tool.bumpversion.files]]
filename = "docs/cookiecutter_input.json"
# ====================================
# Codespell Configuration:
# ====================================
[tool.codespell]
# files/patterns to ignore
skip = [
  "./changelogs/*",
  "cspell.json",
  "./docs/jekyll/_site",
  "*.svg",
  "*.css",
  "*.html",
  "*.lock",
]
# words to ignore globally
ignore-words-list = ["crate", "ba"]

# extra options
check-filenames = true
quiet-level = 2
# ====================================
# Deptry Configuration:
# ====================================
[tool.deptry]
ignore_notebooks = true
exclude = [
    "tests/*",
    "docs/*",
]
# ====================================
# ruff (linter, formatter, import sorter)
# ====================================
[tool.ruff]
# Target Python version
target-version = "{{ cookiecutter.__python.target_version }}"

# Directories to lint and format
src = [
  "src",
  "tests"
]

# Exclude these paths
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "docs",
  "*.egg-info",
  ".git",
  ".github",
]

force-exclude = true

# Maximum line length
line-length = 120
# ====================================
# Ruff Lint Configuration:
# ====================================
[tool.ruff.lint]
fixable = ["ALL"]
# Enable linting rules
select = [
  "W",  # PyCodeStyle warnings
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4", # comprehensions
  "TID", # tidy imports
  "FA", # future annotations
  "PL", # pylint-style checks
  "RUF", # ruff-specific
]

# Ignore specific rules
ignore = [
  "E501",  # line too long (handled by formatter)
  "PLR2004",  # magic value comparison
  "B008",  # function call in default argument
  "RUF200", # invalid pyproject.toml file that does not conform to the relevant specifications (PEPs)
]
# ====================================
# Import Sorting Configuration: (Python helper scripts)
# ====================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
  "{{ cookiecutter.project_slug }}"
]
# ====================================
# Formatter configuration
# Ruff also formats YAML, TOML, and Markdown
# ====================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
# ====================================
# Mypy (type checker) Configuration
# ====================================
[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
mypy_path = [
  "src",
]
strict = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# ====================================
# Pytest configuration
# ====================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--maxfail=1", "-W always", "-rw", "--strict-markers"]
testpaths = [
  "tests"
]
pythonpath = [
  "src"
]
